# taskmaster

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/modules/: cli.rs  docs.rs  logging.rs  mod.rs  task.rs  utils.rs  windows.rs
tasks/: ExecPowerShell.ps1  InstallExe.ps1  MapDrive.ps1  MapPrinter.ps1  tasks.yaml
tasks/lib/: utils.psm1
