[package]
name = "taskmaster"
description = "An automation framework for PowerShell script creation/execution."
version = "0.1.0"
edition = "2024"
authors = ["Slackaduts <54456755+Slackaduts@users.noreply.github.com>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["cargo", "color"] }
indoc = "2.0.5"
log = "0.4.22"
log4rs = "1.3.0"
rfd = "0.14.1"
serde_json = "1.0.117"
serde_yml = "0.0.10"
sha256 = "1.5.0"
tokio = { version = "1.38.0", features = ["full"] }
warp = "0.3.7"
